--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -300,11 +300,11 @@
 	"block.betternether.roof_tile_wart_stairs": "Wart Roof Tile Stairs",
 	"block.betternether.roof_tile_wart_slab": "Wart Roof Tile Slab",
 	
-	"block.betternether.taburet_reeds": "Reeds Taburet",
-	"block.betternether.taburet_stalagnate": "Stalagnate Taburet",
-	"block.betternether.taburet_willow": "Willow Taburet",
-	"block.betternether.taburet_wart": "Wart Taburet",
-	"block.betternether.taburet_cincinnasite": "Cincinnasite Taburet",
+	"block.betternether.taburet_reeds": "Reeds Stool",
+	"block.betternether.taburet_stalagnate": "Stalagnate Stool",
+	"block.betternether.taburet_willow": "Willow Stool",
+	"block.betternether.taburet_wart": "Wart Stool",
+	"block.betternether.taburet_cincinnasite": "Cincinnasite Stool",
 	
 	"block.betternether.stalagnate_ladder": "Stalagnate Ladder",
 	"block.betternether.willow_ladder": "Willow Ladder",
