--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -322,5 +322,8 @@
 	
 	"block.betternether.striped_bark_stalagnate": "Обтёсанная древесина сталагната",
 	"block.betternether.striped_bark_willow": "Обтёсанная древесина ивы",
-	"block.betternether.striped_bark_wart": "Обтёсанная древесина нароста"
+	"block.betternether.striped_bark_wart": "Обтёсанная древесина нароста",
+	
+	"block.betternether.giant_mold": "Гигантская плесень",
+	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени"
 }
