--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -325,5 +325,25 @@
 	"block.betternether.striped_bark_wart": "Striped Wart Wood",
 	
 	"block.betternether.giant_mold": "Giant Mold",
-	"block.betternether.giant_mold_sapling": "Giant Mold Sapling"
+	"block.betternether.giant_mold_sapling": "Giant Mold Sapling",
+	
+	"block.betternether.bar_stool_reeds": "Reed Bar Stool",
+	"block.betternether.bar_stool_stalagnate": "Stalagnate Bar Stool",
+	"block.betternether.bar_stool_willow": "Willow Bar Stool",
+	"block.betternether.bar_stool_wart": "Wart Bar Stool",
+	"block.betternether.bar_stool_cincinnasite": "Cincinnasite Bar Stool",
+	
+	"biome.betternether.gravel_desert: "Gravel Desert",
+	"biome.betternether.nether_jungle: "Nether Jungle",
+	"biome.betternether.wart_forest: "Wart Forest",
+	"biome.betternether.nether_grasslands: "Nether Grasslands",
+	"biome.betternether.nether_mushroom_forest: "Nether Mushroom Forest",
+	"biome.betternether.nether_mushroom_forest_edge: "Nether Mushroom Forest Edge",
+	"biome.betternether.wart_forest_edge: "Wart Forest Edge",
+	"biome.betternether.bone_reef: "Bone Reef",
+	"biome.betternether.poor_grasslands: "Poor Grasslands",
+	"biome.betternether.nether_swampland: "Nether Swampland",
+	"biome.betternether.nether_swampland_terraces: "Nether Swampland Terraces",
+	"biome.betternether.magma_land: "Magma Land",
+	"biome.betternether.soul_plain: "Soul Plain"
 }
