--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -325,5 +325,25 @@
 	"block.betternether.striped_bark_wart": "Обтёсанная древесина нароста",
 	
 	"block.betternether.giant_mold": "Гигантская плесень",
-	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени"
+	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени",
+	
+	"block.betternether.bar_stool_reeds": "Тростниковый барный стул",
+	"block.betternether.bar_stool_stalagnate": "Сталагнатовый барный стул",
+	"block.betternether.bar_stool_willow": "Ивовый барный стул",
+	"block.betternether.bar_stool_wart": "Наростовый барный стул",
+	"block.betternether.bar_stool_cincinnasite": "Цинцинназитовый барный стул",
+	
+	"biome.betternether.gravel_desert: "Гравийная пустыня",
+	"biome.betternether.nether_jungle: "Адские джунгли",
+	"biome.betternether.wart_forest: "Лес наростов",
+	"biome.betternether.nether_grasslands: "Адские луга",
+	"biome.betternether.nether_mushroom_forest: "Адский грибной лес",
+	"biome.betternether.nether_mushroom_forest_edge: "Окраина адского грибного леса",
+	"biome.betternether.wart_forest_edge: "Ораина наростового леса",
+	"biome.betternether.bone_reef: "Костяные рифы",
+	"biome.betternether.poor_grasslands: "Обеднённые луга",
+	"biome.betternether.nether_swampland: "Адское болото",
+	"biome.betternether.nether_swampland_terraces: "Террасированное адское болото",
+	"biome.betternether.magma_land: "Магмовые земли",
+	"biome.betternether.soul_plain: "Равнины душ"
 }
