--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -325,5 +325,11 @@
 	"block.betternether.striped_bark_wart": "Обтёсанная древесина нароста",
 	
 	"block.betternether.giant_mold": "Гигантская плесень",
-	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени"
+	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени",
+	
+	"block.betternether.bar_stool_reeds": "Тростниковый барный стул",
+	"block.betternether.bar_stool_stalagnate": "Сталагнатовый барный стул",
+	"block.betternether.bar_stool_willow": "Ивовый барный стул",
+	"block.betternether.bar_stool_wart": "Наростовый барный стул",
+	"block.betternether.bar_stool_cincinnasite": "Цинцинназитовый барный стул"
 }
