--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -2,7 +2,7 @@
 	"container.forge": "Печь",
 	"container.chest_of_drawers": "Комод",
 
-	"entity.firefly": "Светлячёк",
+	"entity.betternether.firefly": "Светлячёк",
 
 	"item.betternether.black_apple": "Чёрное яблоко",
 
@@ -408,5 +408,7 @@
 	"block.betternether.bar_stool_dark_oak": "Барный стул из тёмного дуба",
 	
 	"item.betternether.cincinnasite_hammer": "Цинцинназитовый молот",
-	"item.betternether.cincinnasite_hammer_diamond": "Цинцинназитово-алмазный молот"
+	"item.betternether.cincinnasite_hammer_diamond": "Цинцинназитово-алмазный молот",
+	
+	"block.betternether.nether_brewing_stand": "Зельеварка нижнего мира"
 }
