--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -3,6 +3,7 @@
 	"container.chest_of_drawers": "Chest of Drawers",
 
 	"entity.betternether.firefly": "Firefly",
+	"entity.betternether.hydrogen_jellyfish": "Hydrogen Jellyfish",
 
 	"item.betternether.black_apple": "Black Apple",
 
@@ -396,5 +397,7 @@
 	"item.betternether.cincinnasite_hammer": "Cincinnasite Hammer",
 	"item.betternether.cincinnasite_hammer_diamond": "Cincinnasite-Diamond Hammer",
 	
-	"block.betternether.nether_brewing_stand": "Nether Brewing Stand"
+	"block.betternether.nether_brewing_stand": "Nether Brewing Stand",
+	
+	"betternether.createWorld.customize.preset.betternether.flat_nether": "Flat Nether"
 }
