More potted plants, naga entity

--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -399,5 +399,7 @@
 	
 	"block.betternether.nether_brewing_stand": "Зельеварка нижнего мира",
 	
-	"betternether.flat_nether": "Плоский нижний мир"
+	"betternether.flat_nether": "Плоский нижний мир",
+	
+	"item.betternether.spawn_egg_hydrogen_jellyfish": "Яйцо призыва водородной медузы"
 }
