--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -413,7 +413,7 @@
 	
 	"block.betternether.nether_brewing_stand": "Nether Brewing Stand",
 	
-	"betternether.createWorld.customize.preset.betternether.flat_nether": "Flat Nether",
+	"betternether.flat_nether": "Flat Nether",
 	
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "Hydrogen Jellyfish Spawn Egg"
 }
