--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -415,5 +415,6 @@
 	
 	"betternether.flat_nether": "Flat Nether",
 	
-	"item.betternether.spawn_egg_hydrogen_jellyfish": "Hydrogen Jellyfish Spawn Egg"
+	"item.betternether.spawn_egg_hydrogen_jellyfish": "Hydrogen Jellyfish Spawn Egg",
+	"block.betternether.brick_pot": "Brick Pot"
 }
