Forge fix, translation, rubeus blocks

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -347,6 +347,10 @@
 	"biome.betternether.nether_swampland_terraces": "Nether Swampland Terraces",
 	"biome.betternether.magma_land": "Magma Land",
 	"biome.betternether.soul_plain": "Soul Plain",
+	"biome.betternether.crimson_glowing_woods": "Crimson Glowing Woods",
+	"biome.betternether.old_warped_woods": "Old Warped Woods",
+	"biome.betternether.crimson_pinewood": "Crimson Pinewood",
+	"biome.betternether.old_fungiwoods": "Old Fungiwoods",
 	
 	"block.betternether.mushroom_fir": "Mushroom Fir",
 	"block.betternether.mushroom_fir_sapling": "Mushroom Fir Sapling",
