--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -347,6 +347,10 @@
 	"biome.betternether.nether_swampland_terraces: "Террасированное адское болото",
 	"biome.betternether.magma_land: "Магмовые земли",
 	"biome.betternether.soul_plain: "Равнины душ",
+	"biome.betternether.crimson_glowing_woods": "Светящийся багровый лес",
+	"biome.betternether.old_warped_woods": "Старый искажённый лес",
+	"biome.betternether.crimson_pinewood": "Багровый бор",
+	"biome.betternether.old_fungiwoods": "Старый грибной лес",
 	
 	"block.betternether.mushroom_fir": "Грибная ель",
 	"block.betternether.mushroom_fir_sapling": "Саженец грибной ели",
