--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -420,5 +420,12 @@
 	"betternether.flat_nether": "Плоский нижний мир",
 	
 	"item.betternether.spawn_egg_hydrogen_jellyfish": "Яйцо призыва водородной медузы",
-	"block.betternether.brick_pot": "Кирпичный горшок"
+	"block.betternether.brick_pot": "Кирпичный горшок",
+	
+	"block.betternether.striped_log_rubeus": "Обтёсанное бревно рубейса",
+	"block.betternether.striped_bark_rubeus": "Обтёсанная древесина рубейса",
+	"block.betternether.rubeus_log": "Бревно рубейса",
+	"block.betternether.rubeus_bark": "Древесина рубейса",
+	"block.betternether.rubeus_leaves": "Листья рубейса",
+	"block.betternether.rubeus_planks": "Рубейсовые доски "
 }
