New biome system, Rubeus tree fixes

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -340,7 +340,7 @@
 	"biome.betternether.nether_grasslands": "Nether Grasslands",
 	"biome.betternether.nether_mushroom_forest": "Nether Mushroom Forest",
 	"biome.betternether.nether_mushroom_forest_edge": "Nether Mushroom Forest Edge",
-	"biome.betternether.nether_wart_forest_edge": "Wart Forest Edge",
+	"biome.betternether.wart_forest_edge": "Wart Forest Edge",
 	"biome.betternether.bone_reef": "Bone Reef",
 	"biome.betternether.poor_grasslands": "Poor Grasslands",
 	"biome.betternether.nether_swampland": "Nether Swampland",
