--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -340,7 +340,7 @@
 	"biome.betternether.nether_grasslands: "Адские луга",
 	"biome.betternether.nether_mushroom_forest: "Адский грибной лес",
 	"biome.betternether.nether_mushroom_forest_edge: "Окраина адского грибного леса",
-	"biome.betternether.nether_wart_forest_edge: "Ораина наростового леса",
+	"biome.betternether.wart_forest_edge: "Ораина наростового леса",
 	"biome.betternether.bone_reef: "Костяные рифы",
 	"biome.betternether.poor_grasslands: "Обеднённые луга",
 	"biome.betternether.nether_swampland: "Адское болото",
