--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -4,6 +4,9 @@
 
 	"entity.betternether.firefly": "Firefly",
 	"entity.betternether.hydrogen_jellyfish": "Hydrogen Jellyfish",
+	"entity.betternether.naga_projectile": "Naga Projectile",
+	"entity.betternether.naga": "Naga",
+	"item.betternether.spawn_egg_naga": "Naga Spawn Egg",
 
 	"item.betternether.black_apple": "Black Apple",
 
