Translations and soil soil in planes

--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -427,6 +427,8 @@
 	
 	"block.betternether.striped_log_rubeus": "Обтёсанное бревно рубейса",
 	"block.betternether.striped_bark_rubeus": "Обтёсанная древесина рубейса",
+	"block.betternether.rubeus_cone": "Шишка рубейса",
+	"block.betternether.rubeus_sapling": "Саженец рубейса",
 	"block.betternether.rubeus_log": "Бревно рубейса",
 	"block.betternether.rubeus_bark": "Древесина рубейса",
 	"block.betternether.rubeus_leaves": "Листья рубейса",
