--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -410,6 +410,7 @@
 	"block.betternether.striped_log_rubeus": "Striped Rubeus Log",
 	"block.betternether.striped_bark_rubeus": "Striped Rubeus Bark",
 	"block.betternether.rubeus_cone": "Rubeus Cone",
+	"block.betternether.rubeus_sapling": "Rubeus Sapling",
 	"block.betternether.rubeus_log": "Rubeus Log",
 	"block.betternether.rubeus_bark": "Rubeus Bark",
 	"block.betternether.rubeus_leaves": "Rubeus Leaves",
