Rubeus leaves fix, crimson fungus model

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -354,6 +354,7 @@
 	"biome.betternether.old_warped_woods": "Old Warped Woods",
 	"biome.betternether.crimson_pinewood": "Crimson Pinewood",
 	"biome.betternether.old_fungiwoods": "Old Fungiwoods",
+	"biome.betternether.poor_nether_grasslands": "Poor Nether Grasslands",
 	
 	"block.betternether.mushroom_fir": "Mushroom Fir",
 	"block.betternether.mushroom_fir_sapling": "Mushroom Fir Sapling",
