--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -354,6 +354,7 @@
 	"biome.betternether.old_warped_woods": "Старый искажённый лес",
 	"biome.betternether.crimson_pinewood": "Багровый бор",
 	"biome.betternether.old_fungiwoods": "Старый грибной лес",
+	"biome.betternether.poor_nether_grasslands: "Обеднённые адские луга",
 	
 	"block.betternether.mushroom_fir": "Грибная ель",
 	"block.betternether.mushroom_fir_sapling": "Саженец грибной ели",
