--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -448,5 +448,6 @@
 	"block.betternether.bar_stool_rubeus": "Rubeus Bar Stool",
 	"block.betternether.rubeus_ladder": "Rubeus Ladder",
 	
-	"item.betternether.cincinnasite_shears": "Cincinnasite Shears"
+	"item.betternether.cincinnasite_shears": "Cincinnasite Shears",
+	"block.betternether.cincinnasite_anvil": "Cincinnasite Anvil"
 }
