--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -448,5 +448,6 @@
 	"block.betternether.bar_stool_rubeus": "Рубейсовый барный стул",
 	"block.betternether.rubeus_ladder": "Рубейсовая лестница",
 	
-	"item.betternether.cincinnasite_shears": "Цинцинназитовые ножницы"
+	"item.betternether.cincinnasite_shears": "Цинцинназитовые ножницы",
+	"block.betternether.cincinnasite_anvil": "Цинцинназитовая наковальня"
 }
