--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -338,24 +338,24 @@
 	"block.betternether.bar_stool_wart": "Наростовый барный стул",
 	"block.betternether.bar_stool_cincinnasite": "Цинцинназитовый барный стул",
 	
-	"biome.betternether.gravel_desert: "Гравийная пустыня",
-	"biome.betternether.nether_jungle: "Адские джунгли",
-	"biome.betternether.wart_forest: "Лес наростов",
-	"biome.betternether.nether_grasslands: "Адские луга",
-	"biome.betternether.nether_mushroom_forest: "Адский грибной лес",
-	"biome.betternether.nether_mushroom_forest_edge: "Окраина адского грибного леса",
-	"biome.betternether.wart_forest_edge: "Ораина наростового леса",
-	"biome.betternether.bone_reef: "Костяные рифы",
-	"biome.betternether.poor_grasslands: "Обеднённые луга",
-	"biome.betternether.nether_swampland: "Адское болото",
-	"biome.betternether.nether_swampland_terraces: "Террасированное адское болото",
-	"biome.betternether.magma_land: "Магмовые земли",
-	"biome.betternether.soul_plain: "Равнины душ",
+	"biome.betternether.gravel_desert": "Гравийная пустыня",
+	"biome.betternether.nether_jungle": "Адские джунгли",
+	"biome.betternether.wart_forest": "Лес наростов",
+	"biome.betternether.nether_grasslands": "Адские луга",
+	"biome.betternether.nether_mushroom_forest": "Адский грибной лес",
+	"biome.betternether.nether_mushroom_forest_edge": "Окраина адского грибного леса",
+	"biome.betternether.wart_forest_edge": "Ораина наростового леса",
+	"biome.betternether.bone_reef": "Костяные рифы",
+	"biome.betternether.poor_grasslands": "Обеднённые луга",
+	"biome.betternether.nether_swampland": "Адское болото",
+	"biome.betternether.nether_swampland_terraces": "Террасированное адское болото",
+	"biome.betternether.magma_land": "Магмовые земли",
+	"biome.betternether.soul_plain": "Равнины душ",
 	"biome.betternether.crimson_glowing_woods": "Светящийся багровый лес",
 	"biome.betternether.old_warped_woods": "Старый искажённый лес",
 	"biome.betternether.crimson_pinewood": "Багровый бор",
 	"biome.betternether.old_fungiwoods": "Старый грибной лес",
-	"biome.betternether.poor_nether_grasslands: "Обеднённые адские луга",
+	"biome.betternether.poor_nether_grasslands": "Обеднённые адские луга",
 	
 	"block.betternether.mushroom_fir": "Грибная ель",
 	"block.betternether.mushroom_fir_sapling": "Саженец грибной ели",
