--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -9,6 +9,8 @@
 	"item.betternether.spawn_egg_naga": "Naga Spawn Egg",
 	"entity.betternether.flying_pig": "Flying Pig",
 	"item.betternether.spawn_egg_flying_pig": "Flying Pig Spawn Egg",
+	"entity.betternether.jungle_skeleton": "Jungle Skeleton",
+	"item.betternether.spawn_egg_jungle_skeleton": "Jungle Skeleton Spawn Egg",
 
 	"item.betternether.black_apple": "Black Apple",
 
