--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -9,6 +9,8 @@
 	"item.betternether.spawn_egg_naga": "Яйцо призыва наги",
 	"entity.betternether.flying_pig": "Летающая свинья",
 	"item.betternether.spawn_egg_flying_pig": "Яйцо призыва летающей свиньи",
+	"entity.betternether.jungle_skeleton": "Скелет джунглей",
+	"item.betternether.spawn_egg_jungle_skeleton": "Яйцо призыва скелета джунглей",
 
 	"item.betternether.black_apple": "Чёрное яблоко",
 
