--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -477,5 +477,17 @@
 	"item.betternether.nether_ruby_helmet": "Рубиновый шлем",
 	"item.betternether.nether_ruby_chestplate": "Рубиновый нагрудник",
 	"item.betternether.nether_ruby_leggings": "Рубиновые поножи",
-	"item.betternether.nether_ruby_boots": "Рубиновые ботинки"
+	"item.betternether.nether_ruby_boots": "Рубиновые ботинки",
+	
+	"block.betternether.soul_sandstone": "Песчаник душ",
+	"block.betternether.soul_sandstone_cut": "Обработанный песчаник душ",
+	"block.betternether.soul_sandstone_smooth": "Гладкий песчаник душ",
+	
+	"block.betternether.soul_sandstone_stairs": "Ступени из песчаника душ",
+	"block.betternether.soul_sandstone_cut_stairs": "Ступени из обработанного песчаника душ",
+	"block.betternether.soul_sandstone_smooth_stairs": "Ступени из гладкого песчаника душ",
+	
+	"block.betternether.soul_sandstone_slab": "Плита из песчаника душ",
+	"block.betternether.soul_sandstone_cut_slab": "Плита из обработанного песчаника душ",
+	"block.betternether.soul_sandstone_smooth_slab": "Плита из гладкого песчаника душ"
 }
