Glass panes refactored, soul sandstone wall

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -491,5 +491,7 @@
 	
 	"block.betternether.soul_sandstone_slab": "Soul Sandstone Slab",
 	"block.betternether.soul_sandstone_cut_slab": "Cutted Soul Sandstone Slab",
-	"block.betternether.soul_sandstone_smooth_slab": "Smooth Soul Sandstone Slab"
+	"block.betternether.soul_sandstone_smooth_slab": "Smooth Soul Sandstone Slab",
+	
+	"block.betternether.soul_sandstone_wall": "Soul Sandstone Wall"
 }
