Jungle structures & some edits

--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -484,6 +484,7 @@
 	"block.betternether.soul_sandstone": "Soul Sandstone",
 	"block.betternether.soul_sandstone_cut": "Cutted Soul Sandstone",
 	"block.betternether.soul_sandstone_smooth": "Smooth Soul Sandstone",
+	"block.betternether.soul_sandstone_chiseled": "Chiseled Soul Sandstone",
 	
 	"block.betternether.soul_sandstone_stairs": "Soul Sandstone Stairs",
 	"block.betternether.soul_sandstone_cut_stairs": "Cutted Soul Sandstone Stairs",
