--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -482,6 +482,7 @@
 	"block.betternether.soul_sandstone": "Песчаник душ",
 	"block.betternether.soul_sandstone_cut": "Обработанный песчаник душ",
 	"block.betternether.soul_sandstone_smooth": "Гладкий песчаник душ",
+	"block.betternether.soul_sandstone_chiseled": "Резной песчаник душ",
 	
 	"block.betternether.soul_sandstone_stairs": "Ступени из песчаника душ",
 	"block.betternether.soul_sandstone_cut_stairs": "Ступени из обработанного песчаника душ",
