--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -482,7 +482,7 @@
 	"item.betternether.nether_ruby_boots": "Nether Ruby Boots",
 	
 	"block.betternether.soul_sandstone": "Soul Sandstone",
-	"block.betternether.soul_sandstone_cut": "Cutted Soul Sandstone",
+	"block.betternether.soul_sandstone_cut": "Cut Soul Sandstone",
 	"block.betternether.soul_sandstone_smooth": "Smooth Soul Sandstone",
 	"block.betternether.soul_sandstone_chiseled": "Chiseled Soul Sandstone",
 	
